[package]
name = "raytrace_one_week"
description = "Yet another raytracing in one week"
authors = ["CatCode79"]
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.79"
version = "0.1.0"

[dependencies]
fenestella = { git = "https://github.com/CatCode79/fenestella" }
glam = "0.28"
profiling = { version = "1", default-features = false, features = ["profile-with-tracy"]}
wgpu-hal = "0.21"
